--- a/angular.json
+++ b/angular.json
@@ -1,9 +1,9 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ng9-firebase": {
+    "ng9-firebase-realtime-db-crud": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ng9-firebase",
+            "outputPath": "dist/ng9-firebase-realtime-db-crud",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -66,18 +66,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ng9-firebase:build"
+            "browserTarget": "ng9-firebase-realtime-db-crud:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ng9-firebase:build:production"
+              "browserTarget": "ng9-firebase-realtime-db-crud:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ng9-firebase:build"
+            "browserTarget": "ng9-firebase-realtime-db-crud:build"
           }
         },
         "test": {
@@ -114,15 +114,19 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ng9-firebase:serve"
+            "devServerTarget": "ng9-firebase-realtime-db-crud:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ng9-firebase:serve:production"
+              "devServerTarget": "ng9-firebase-realtime-db-crud:serve:production"
             }
           }
         }
       }
-    }},
-  "defaultProject": "ng9-firebase"
+    }
+  },
+  "defaultProject": "ng9-firebase-realtime-db-crud",
+  "cli": {
+    "analytics": "68cee9c0-29a0-450a-888e-715902891e10"
+  }
 }
